Fix missing page top margin after the invisible challenge solved notification thingy was removed

--- a/frontend/src/app/chatbot/chatbot.component.scss
+++ b/frontend/src/app/chatbot/chatbot.component.scss
@@ -10,7 +10,7 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
-  height: calc(100vh - 72px);
+  height: calc(100vh - $navbar-height - $space-l);
   overflow-y: auto;
 }
 
