--- a/frontend/src/app/navbar/navbar.component.scss
+++ b/frontend/src/app/navbar/navbar.component.scss
@@ -10,6 +10,7 @@ mat-toolbar {
   min-width: 100%;
   padding: $space-2xs 0;
   width: 100%;
+  margin-bottom: $space-l;
 }
 
 .mat-mdc-button {
