--- a/frontend/src/styles/_variables.scss
+++ b/frontend/src/styles/_variables.scss
@@ -20,3 +20,6 @@ $space-xl: 2rem; // 32px
 $space-2xl: 2.5rem; // 40px
 $space-3xl: 3rem; // 48px
 $space-4xl: 4rem; // 64px
+
+// Component sizes
+$navbar-height: 72px;
